[package]
name = "lightbench"
version = "0.1.2"
edition = "2021"
description = "A transport-agnostic benchmarking framework for latency and throughput measurement"
license = "MIT OR Apache-2.0"
keywords = ["benchmark"]
categories = ["development-tools::profiling", "asynchronous"]
repository = "https://github.com/pawissanutt/lightbench"

[dependencies]
tokio = { version = "1.48", features = ["rt", "time", "sync", "fs", "io-util"] }
hdrhistogram = "7.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
tokio-test = "0.4"

[[example]]
name = "http_get_benchmark"
path = "examples/http_get_benchmark.rs"

[[example]]
name = "producer_consumer"
path = "examples/producer_consumer.rs"

[[example]]
name = "async_task"
path = "examples/async_task.rs"

[[example]]
name = "noop"
path = "examples/noop.rs"
